force-app/main/default/objects/b3s__Suitability__c/b3s__Suitability__c.object-meta.xml
<CustomObject>
    <label>Suitability</label>
    <nameField>
        <displayFormat>SUIT-{0}</displayFormat>
        <label>Suitability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suitabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>