force-app/main/default/objects/b3s__Suitability__c/fields/b3s__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3s__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Suitabilities</relationshipLabel>
    <relationshipName>Suitabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>