force-app/main/default/objects/b3s__Suitability__c/fields/b3s__Rating__c.field-meta.xml
<CustomField>
    <fullName>b3s__Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Terrible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>